# gz_sim_spray_painting_plugin

./: .dockerignore  .gitignore  Dockerfile  README.md  startScript.sh
docker/: docker-compose.yml  entrypoint.sh
run_scripts/: container_tmux_setup.sh  run_docker.sh  run_perf_tests.py  run_tests.py
src/gz_sim_spray_painting_plugin/: package.xml
src/gz_sim_spray_painting_plugin/launch/: demo.launch.py
src/gz_sim_spray_painting_plugin/src/: SprayPaintPlugin.cc
src/gz_sim_spray_painting_plugin/urdf/: spray_nozzle.urdf  ur_spray_gz.urdf.xacro
src/gz_sim_spray_painting_plugin/worlds/: spray_painting.sdf  (+3 more)
src/gz_spray_painting_plugin_demo/: CMakeLists.txt  package.xml
src/gz_spray_painting_plugin_demo/config/: cartesian_poses.yaml  kinematics.yaml  ur_sim_controllers.yaml
src/gz_spray_painting_plugin_demo/config/ur5e/: visual_parameters.yaml
src/gz_spray_painting_plugin_demo/hooks/: gz_sim_resource_path.sh.in
src/gz_spray_painting_plugin_demo/launch/: cartesian_spray.launch.py  ur_spray_demo.launch.py
src/gz_spray_painting_plugin_demo/models/ambulance/: metadata.pbtxt  model.config  model.sdf
src/gz_spray_painting_plugin_demo/models/ambulance/meshes/: ambulance.mtl
src/gz_spray_painting_plugin_demo/models/prius_hybrid/: model.config  model.sdf
src/gz_spray_painting_plugin_demo/models/suv/: model.sdf
src/gz_spray_painting_plugin_demo/models/workcell/: model.sdf
src/gz_spray_painting_plugin_demo/scripts/: spray_perf_log.sh
src/gz_spray_painting_plugin_demo/urdf/: ur_macro.xacro
src/gz_spray_painting_plugin_demo/worlds/: factory_demo.sdf
(+1 files in other folders)
